--- a/.github/workflows/producao.yml
+++ b/.github/workflows/producao.yml
@@ -18,11 +18,11 @@ jobs:
 
 
   job1:
-    name: CI - Build e criação de artefato
+    name: CI - Build e criação do artefato
     runs-on: ubuntu-latest
     steps:
       - name: Pegar código do Repositório
-      uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Instalando pacotes do npm
         run: npm install
@@ -30,7 +30,7 @@ jobs:
       - name: Gerando documentação do swagger.json
         run: npm run autoDoc
 
-      - name: Apagando pastas nome_modules
+      - name: Apagando pasta node_modules
         run: rm -rf node_modules
 
       - name: Apagando pasta .git
