--- a/EXEMPLO.env
+++ b/EXEMPLO.env
@@ -1,1 +1,3 @@
 NODE_ENV="localhost"
+SWAGGER_SENHA_DOC=""
+MONGODB_URI="mongodb+srv://<username>:<password>@cluster.hxwix4u.mongodb.net/localhost?retryWrites=true&w=majority"
