--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "morgan": "~1.9.1",
     "string": "^3.3.3",
     "swagger-autogen": "^2.23.1",
-    "swagger-ui-express": "^4.6.2",
-    "validator": "^13.9.0"
+    "swagger-ui-express": "^4.6.2"
   }
 }
